Try Formsubmit.co

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <div class="container">
                 <h1>Cari jasa pindahan di Jakarta? Matelindo solusinya!</h1>
                 <p>Matelindo akan membantu Anda untuk menyelesaikan pindahan secara efisien: cepat, tepat waktu dan aman
-                    dengan service lengkap<br /><br /><a href="#welcome">Continue <i class="fa fa-angle-down"></i></a>
+                    dengan service lengkap<br /><br /><a href="#welcome">Lanjutkan <i class="fa fa-angle-down"></i></a>
                 </p>
             </div>
         </div>
@@ -141,7 +141,7 @@
                         </div>
                         <textarea name="addr" placeholder="Alamat Lengkap" required></textarea>
                         <textarea name="mssg" placeholder="Pesan " required></textarea>
-                        <input type="submit" value="KIRIM" />
+                        <input type="submit" value="Kirim" />
                     </form>
                 </div>
             </div>
