--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                         maka Kami menyediakan jasa konsultasi secara gratis (untuk wilayah Jabodetabek & Bandung). Staf
                         kami akan mendengarkan keinginan Anda dan memberikan pilihan jasa pindahan yang sesuai dengan
                         kebutuhan Anda.</p>
-                    <form method="POST" action="https://formsubmit.co/alif.satoe@gmail.com" enctype="multipart/form-data" style="margin: 32px 0px;">
+                    <form method="POST" action="https://formsubmit.co/alif.satoe@gmail.com" style="margin: 32px 0px;">
                         <input type="text" name="name" placeholder="Nama Lengkap" required />
                         <div class="d-grid col-2" style="margin: 16px 0px;">
                             <input type="email" name="mail" placeholder="Alamat Email" required />
