Change email address to String

--- a/index.html
+++ b/index.html
@@ -133,14 +133,14 @@
                         maka Kami menyediakan jasa konsultasi secara gratis (untuk wilayah Jabodetabek & Bandung). Staf
                         kami akan mendengarkan keinginan Anda dan memberikan pilihan jasa pindahan yang sesuai dengan
                         kebutuhan Anda.</p>
-                    <form method="POST" action="https://formsubmit.co/alif.satoe@gmail.com" style="margin: 32px 0px;">
-                        <input type="text" name="name" placeholder="Nama Lengkap" required />
+                    <form method="POST" action="https://formsubmit.co/4b99bdab9a3e9daa3cd4dd21880f3ac1" style="margin: 32px 0px;">
+                        <input type="text" name="Nama" placeholder="Nama Lengkap" required />
                         <div class="d-grid col-2" style="margin: 16px 0px;">
-                            <input type="email" name="mail" placeholder="Alamat Email" required />
-                            <input type="text" name="nohp" placeholder="Nomor Telepon" required />
+                            <input type="email" name="Email" placeholder="Alamat Email" required />
+                            <input type="text" name="Nomor HP" placeholder="Nomor Telepon" required />
                         </div>
-                        <textarea name="addr" placeholder="Alamat Lengkap" required></textarea>
-                        <textarea name="mssg" placeholder="Pesan " required></textarea>
+                        <textarea name="Alamat" placeholder="Alamat Lengkap" required></textarea>
+                        <textarea name="Pesan" placeholder="Pesan " required></textarea>
                         <input type="submit" value="Kirim" />
                     </form>
                 </div>
