--- a/index.html
+++ b/index.html
@@ -134,6 +134,10 @@
                         kami akan mendengarkan keinginan Anda dan memberikan pilihan jasa pindahan yang sesuai dengan
                         kebutuhan Anda.</p>
                     <form method="POST" action="https://formsubmit.co/4b99bdab9a3e9daa3cd4dd21880f3ac1" style="margin: 32px 0px;">
+                        <input type="text" name="_honey" style="display: none;">
+                        
+                        <input type="hidden" name="_captcha" value="false">
+                        
                         <input type="text" name="Nama" placeholder="Nama Lengkap" required />
                         <div class="d-grid col-2" style="margin: 16px 0px;">
                             <input type="email" name="Email" placeholder="Alamat Email" required />
