Clean up the form

--- a/index.html
+++ b/index.html
@@ -141,10 +141,10 @@
                         <input type="text" name="Nama" placeholder="Nama Lengkap" required />
                         <div class="d-grid col-2" style="margin: 16px 0px;">
                             <input type="email" name="Email" placeholder="Alamat Email" required />
-                            <input type="text" name="Nomor HP" placeholder="Nomor Telepon" required />
+                            <input type="text" name="Nomor&nbsp;HP" placeholder="Nomor Telepon" required />
                         </div>
-                        <textarea name="Alamat" placeholder="Alamat Lengkap" required></textarea>
-                        <textarea name="Pesan" placeholder="Pesan " required></textarea>
+                        <textarea name="Alamat" placeholder="Alamat&nbsp;Lengkap" required></textarea>
+                        <textarea name="Pesan" placeholder="Pesan" required></textarea>
                         <input type="submit" value="Kirim" />
                     </form>
                 </div>
