Formatting index.html

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="description"
         content="Cari jasa pindahan di Jakarta? Matelindo solusinya! Matelindo melayani jasa pindahan ke seluruh wilayah Jabodetabek." />
     <link rel="canonical" href="https://matelindo.com/">
-    <link rel="shortcut icon" href="https://matelindo.com/images/logomatelindosamasisi.png" />
+    <link rel="shortcut icon" href="./images/logomatelindosamasisi.png" />
     <link rel="stylesheet" href="styles.css" />
     <script src="https://kit.fontawesome.com/bc838833bc.js" crossorigin="anonymous"></script>
 </head>
@@ -42,7 +42,7 @@
         <section id="welcome">
             <div class="container">
                 <div style="width: 100%;text-align: center;margin-bottom: 32px;">
-                    <img src="images/jasapindahanjakartautara.jpg" style="width: 100%;border-radius: 14px;" />
+                    <img src="./images/jasapindahanjakartautara.jpg" style="width: 100%;border-radius: 14px;" />
                 </div>
                 <div class="d-flex col-2">
                     <h1 class="title">Tentang Kami</h1>
@@ -61,7 +61,7 @@
                 <div id="services" class="d-grid col-3">
                     <div class="service">
                         <h3>Jasa Pindahan Bisnis / Perkantoran</h3>
-                        <img src="images/bisnis.jpg" />
+                        <img src="./images/bisnis.jpg" />
                         <div class="detail">
                             <p>Pindahan kantor akan kami buat sesederhana mungkin tetapi tetap tercatat sehingga untuk
                                 penempatan barang² akan sesuai dengan sebelumnya.</p>
@@ -69,7 +69,7 @@
                     </div>
                     <div class="service">
                         <h3>Jasa Pindahan Residensial</h3>
-                        <img src="images/jasapindahanresidensial.jpg" />
+                        <img src="./images/jasapindahanresidensial.jpg" />
                         <div class="detail">
                             <p>Pemindahan disertai dengan packing standard local moving, dengan menggunakan material
                                 berkualitas dan packing list untuk memudahkan pencarian barang.</p>
@@ -77,7 +77,7 @@
                     </div>
                     <div class="service">
                         <h3>Jasa Pindahan Benda Seni</h3>
-                        <img src="images/bendaseni.jpg" />
+                        <img src="./images/bendaseni.jpg" />
                         <div class="detail">
                             <p>Benda² seni dan antik anda akan kami packing dengan material peruntukanya untuk
                                 menghindari benturan, goresan, patah dan kotor.</p>
@@ -85,7 +85,7 @@
                     </div>
                     <div class="service">
                         <h3>Jasa Packing</h3>
-                        <img src="images/jasapacking.jpg" />
+                        <img src="./images/jasapacking.jpg" />
                         <div class="detail">
                             <p>Dengan crew yg berpengalaman lebih dari 10 tahun, dipastikan packing sesuai dengan barang
                                 yang akan dipack.</p>
@@ -93,7 +93,7 @@
                     </div>
                     <div class="service">
                         <h3>Jasa Angkutan Barang</h3>
-                        <img src="images/angkutan.jpg" />
+                        <img src="./images/angkutan.jpg" />
                         <div class="detail">
                             <p>Jasa pindah tidak terlepas dari trucking/angkutan. Maka kamipun selalu menyediakan
                                 angkutan dengan service lengkap.</p>
@@ -101,7 +101,7 @@
                     </div>
                     <div class="service">
                         <h3>Gudang Penyimpanan</h3>
-                        <img src="images/gudang.jpg" />
+                        <img src="./images/gudang.jpg" />
                         <div class="detail">
                             <p>Penyimpanan akan dipisahkan dalam palet masing² customer dengan selalu menjaga kebersihan
                                 dan aman dari pest/hama.</p>
@@ -133,17 +133,16 @@
                         maka Kami menyediakan jasa konsultasi secara gratis (untuk wilayah Jabodetabek & Bandung). Staf
                         kami akan mendengarkan keinginan Anda dan memberikan pilihan jasa pindahan yang sesuai dengan
                         kebutuhan Anda.</p>
-                    <form method="POST" action="https://formsubmit.co/4b99bdab9a3e9daa3cd4dd21880f3ac1" style="margin: 32px 0px;">
+                    <form method="POST" action="https://formsubmit.co/4b99bdab9a3e9daa3cd4dd21880f3ac1"
+                        style="margin: 32px 0px;">
                         <input type="text" name="_honey" style="display: none;">
-                        
                         <input type="hidden" name="_captcha" value="false">
-                        
                         <input type="text" name="Nama" placeholder="Nama Lengkap" required />
                         <div class="d-grid col-2" style="margin: 16px 0px;">
                             <input type="email" name="Email" placeholder="Alamat Email" required />
-                            <input type="text" name="Nomor&nbsp;HP" placeholder="Nomor Telepon" required />
+                            <input type="text" name="Nomor&nbsp;Telepon" placeholder="Nomor Telepon" required />
                         </div>
-                        <textarea name="Alamat" placeholder="Alamat&nbsp;Lengkap" required></textarea>
+                        <textarea name="Alamat" placeholder="Alamat Lengkap" required></textarea>
                         <textarea name="Pesan" placeholder="Pesan" required></textarea>
                         <input type="submit" value="Kirim" />
                     </form>
