--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="description"
         content="Cari jasa pindahan di Jakarta? Matelindo solusinya! Matelindo melayani jasa pindahan ke seluruh wilayah Jabodetabek." />
     <link rel="canonical" href="https://matelindo.com/">
-    <link rel="shortcut icon" href="./images/logomatelindosamasisi.png" />
+    <link rel="icon" href="./images/logomatelindosamasisi.png" />
     <link rel="stylesheet" href="styles.css" />
     <script src="https://kit.fontawesome.com/bc838833bc.js" crossorigin="anonymous"></script>
 </head>
