Update form submission to use WhatsApp integration for better user experience

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                         maka Kami menyediakan jasa konsultasi secara gratis (untuk wilayah Jabodetabek & Bandung). Staf
                         kami akan mendengarkan keinginan Anda dan memberikan pilihan jasa pindahan yang sesuai dengan
                         kebutuhan Anda.</p>
-                    <form method="POST" onsubmit="return validate()" style="margin: 32px 0px;">
+                    <form style="margin: 32px 0px;">
                         <input id="name" type="text" name="Nama" placeholder="Nama Lengkap" required />
                         <div class="d-grid col-2" style="margin: 16px 0px;">
                             <input id="email" type="email" name="Email" placeholder="Alamat Email" required />
