Update WhatsApp link and improve form submission for better user experience

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
             <div class="container">
                 <h1 class="title">Hubungi Kami</h1>
                 <div class='d-grid col-2' style='max-width: 768px;margin: auto;'>
-                    <a type="button" href="https://api.whatsapp.com/send?phone=6285210102325&text=Hello_Matelindo"
+                    <a type="button" href="https://api.whatsapp.com/send?phone=6285210102325&text=Hello Matelindo"
                         target="_blank"><i class="fa-brands fa-whatsapp"></i> WhatsApp</a>
                     <a type="button" href="https://www.instagram.com/matelindo_movers/" target="_blank"><i
                             class="fa-brands fa-instagram"></i> Instagram</a>
